// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Snap render Badge -- props maxValue 1`] = `
<div
  class="at-badge"
>
  
  
  <!---->
  <div>
    <div
      class="at-badge__num"
    >
      9+
    </div>
  </div>
</div>
`;

exports[`Badge Snap render Badge -- props value less than maxValue 1`] = `
<div
  class="at-badge"
>
  
  
  <!---->
  <div>
    <div
      class="at-badge__num"
    >
      4
    </div>
  </div>
</div>
`;

exports[`Badge Snap render Badge -- props value not valid 1`] = `
<div
  class="at-badge"
>
  
  
  <!---->
  <div>
    <div
      class="at-badge__num"
    >
      s
    </div>
  </div>
</div>
`;

exports[`Badge Snap render Loading -- props dot 1`] = `
<div
  class="at-badge"
>
  
  
  <div
    class="at-badge__dot"
  />
  <!---->
</div>
`;

exports[`Badge Snap render initial Badge 1`] = `
<div
  class="at-badge"
>
  
  
  <!---->
  
</div>
`;
